fix header z-index

--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -2,8 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   padding: 0 4rem;
   background-color: #fff0f6;
+
+  z-index: 3;
 
   position: sticky;
   top: 0;
@@ -36,10 +39,9 @@
 
 .nav-link:visited,
 .nav-link:link {
-  color: #8D6D44;
+  color: #8d6d44;
   padding: 2px 0;
   font-size: 16px;
-
 }
 
 .nav-link::after {
